--- a/woodland.css
+++ b/woodland.css
@@ -773,7 +773,7 @@ footer a {
     .hamburger-label {
         display: block;
         margin-right: 10%;
-        margin-left: 5%;
+        margin-left: 6%;
     
     }
     
@@ -844,6 +844,12 @@ footer a {
         margin-left: 0px;
         margin-right: 5px;
     }
+    .wrapper{
+        left:23%;
+     }
+     .dropdown{
+        width: 65%;
+     }
 
     .card2 {
 
@@ -887,6 +893,12 @@ footer a {
         margin-left: 0px;
         margin-right: 0px;
     } 
+    .dropdown{
+        width: 100%;
+     }
+     .wrapper{
+        left:15%;
+     }
     .card1 {
         margin-right: 0px;
     }
@@ -906,6 +918,9 @@ footer a {
         width: 397px;
         height: 100%;
     }
+    .wrapper{
+        left:5%;
+     }
 
     .cs {
         width:390px;
