--- a/woodland.css
+++ b/woodland.css
@@ -250,18 +250,6 @@ body {
     font-size: 16px;
     font-weight: 400;
     z-index: 1;
-    animation: slideIn 0.5s forwards;
-    animation-delay: 0.3s;
-}
-
-@keyframes slideIn {
-    from {
-        bottom: 10%;
-    }
-
-    to {
-        bottom: 15%
-    }
 }
 
 .F1 {
@@ -563,12 +551,11 @@ body {
 .card2 {
     border: none;
     padding-bottom: 50px;
-    margin-left: 15px;
-    margin-bottom: 10px;
-    width: 240px;
-    height: 300px;
+    width: 210px;
+    height: 280px;
 
 }
+
 
 .card-text {
     font-weight: 500;
@@ -577,6 +564,12 @@ body {
     justify-content: start;
 
 }
+.slider-wrapper{
+    overflow: hidden;
+    margin:90px 30px;
+}
+
+
 
 
 /* footer */
