--- a/woodland.css
+++ b/woodland.css
@@ -32,10 +32,11 @@ body {
 }
 
 #navbar1 span {
-    font-weight: bold;
+    font-weight: 500;
     color: white;
     pointer-events: none;
     padding-right: 2px;
+    font-size: larger;
 }
 
 /* nav 2 */
@@ -601,7 +602,7 @@ footer img {
     margin-left: 10px;
     margin-top: 50px;
     width: auto;
-    height: 65px;
+    height: 80px;
     margin-bottom: 20px;
 }
 
@@ -659,7 +660,7 @@ footer a {
 .subcontainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding-top: 5px;
+    padding-top: 20px;
 }
 
 .subcontainer a:hover {
@@ -858,6 +859,10 @@ footer a {
     .container11 {
         display: grid;
         grid-template-columns: 1fr;
+    }
+    .photo1 {
+        padding-right: 0;
+        padding-bottom: 3%;
     }
 .cn{
     padding: 0%;
