--- a/woodland.css
+++ b/woodland.css
@@ -567,7 +567,7 @@ body {
 }
 .slider-wrapper{
     overflow: hidden;
-    margin:90px 30px;
+    margin:70px 30px;
 }
 
 
@@ -741,14 +741,6 @@ footer a {
         grid-template-columns: 1fr;
 }
 
-    .card-container {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        justify-content: space-evenly;
-        width: 100%;
-        height: 100%;
-        margin-left: 5px;
-        margin-right: 2px;
-    }
     .subcontainer {
         margin-top: 30px;
         order: 1;
@@ -790,16 +782,6 @@ footer a {
         grid-template-columns: 1fr 1fr;
     }
 
-    .card-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        justify-content: space-evenly;
-        padding-left: 10px;
-        margin-left: 0px;
-        margin-right: 0px;
-        
-    }
-    
 
     .card2 {
 
@@ -825,19 +807,16 @@ footer a {
     .connect {
         margin-left: 5px;
     }
+    .slider-wrapper{
+        overflow: hidden;
+        margin:40px 30px;
+    }
+    
 
 
 }
 
-@media only screen and (max-width: 766px) {
-    .card-container {
-        display: grid;
-        grid-template-columns: auto;
-        width: 100%;
-        height: 100%;
-        margin-left: 0px;
-        margin-right: 5px;
-    }
+@media only screen and (max-width: 766px){
     .wrapper{
         left:23%;
      }
@@ -873,6 +852,11 @@ footer a {
         margin-left: 10px;
         margin-right: 0px;
     }
+    .slider-wrapper{
+        overflow: hidden;
+        margin:20px 30px;
+    }
+    
 
 }
 @media only screen and (max-width: 638px){
